# Mole-Open

./: LICENSE  README.md
gpu-program/: Makefile  Note.md  cl.c  crypto.c  cv_edge.cpp  cv_face  cv_face.cpp  cv_face.py  eval_script.py  hook_ocl.c  process_data.py  v2p.h
gpu-program/LKM/: LKM.c  Makefile  user.c
mcu_hacker/: Kbuild  Kconfig  Makefile  main.c  utils.h
parser/: Cargo.toml
parser/src/: build.sh  csf.rs  csf_entry.rs  main.rs  read_helpers.rs  vec_table.rs
shell/: Makefile  compile_commands.json  fw.asm  fw.c  moye.lds  reset.asm  reset.c
