[package]
name = "csfparser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.13.3"
capstone = "0.11.0"
modular-bitfield = "0.11.2"
strum = "0.25.0"
strum_macros = "0.25.3"
unicorn-engine = "2.1.1"
